travis: run cabal install leancheck

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ before_install:
 - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 - stack config set system-ghc --global true
 - stack --version
+- cabal install leancheck
 
 script:
 - make && make test
@@ -70,6 +71,7 @@ matrix:
     - ghc --version
     - cabal --version
     - haddock --version
+    - cabal install leancheck
     script:
     - make && make test
     - make haddock HADDOCKFLAGS=
