.travis.yml: fix title

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# .travis.yml file for LeanCheck
+# .travis.yml file for leancheck-instances
 #
 # Copyright:   (c) 2017-2018 Rudy Matela
 # License:     3-Clause BSD  (see the file LICENSE)
