--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -52,6 +52,7 @@ library
   exposed-modules: Test.LeanCheck.Instances
                  , Test.LeanCheck.Instances.Text
                  , Test.LeanCheck.Instances.Natural
+                 , Test.LeanCheck.Instances.ByteString
   hs-source-dirs: src
   build-depends: base >= 4 && < 5
                , leancheck
