--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -56,6 +56,7 @@ library
   hs-source-dirs: src
   build-depends: base >= 4 && < 5
                , leancheck
+               , bytestring
                , text
   default-language: Haskell2010
 
@@ -66,6 +67,7 @@ test-suite main
   build-depends:       base >= 4 && < 5
                      , leancheck
                      , leancheck-instances
+                     , bytestring
                      , text
   default-language:    Haskell2010
 
