--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -57,6 +57,7 @@ library
   build-depends: base >= 4 && < 5
                , leancheck
                , bytestring
+               , nats
                , text
   default-language: Haskell2010
 
@@ -68,6 +69,7 @@ test-suite main
                      , leancheck
                      , leancheck-instances
                      , bytestring
+                     , nats
                      , text
   default-language:    Haskell2010
 
