--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -53,6 +53,7 @@ library
                  , Test.LeanCheck.Instances.Text
                  , Test.LeanCheck.Instances.Natural
                  , Test.LeanCheck.Instances.ByteString
+                 , Test.LeanCheck.Instances.Containers
   hs-source-dirs: src
   build-depends: base >= 4 && < 5
                , leancheck
