--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -58,6 +58,7 @@ library
   build-depends: base >= 4 && < 5
                , leancheck
                , bytestring
+               , containers
                , nats
                , text
   default-language: Haskell2010
@@ -70,6 +71,7 @@ test-suite main
                      , leancheck
                      , leancheck-instances
                      , bytestring
+                     , containers
                      , nats
                      , text
   default-language:    Haskell2010
