--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -56,7 +56,7 @@ library
                  , Test.LeanCheck.Instances.Containers
   hs-source-dirs: src
   build-depends: base >= 4 && < 5
-               , leancheck
+               , leancheck >= 0.7.7
                , bytestring
                , containers
                , nats
