--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -64,6 +64,7 @@ library
                , containers
                , nats
                , text
+               , time
   default-language: Haskell2010
 
 test-suite main
