--- a/stack.yaml
+++ b/stack.yaml
@@ -1,11 +1,4 @@
-# stack file for leancheck-instances
-resolver: lts-12.14
+resolver: lts-15.5 # or ghc-8.8.3
 
 packages:
 - .
-
-extra-deps: []
-
-flags: {}
-
-extra-package-dbs: []
