--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -31,6 +31,7 @@ extra-source-files: .gitignore
                   , mk/ghcdeps
                   , mk/haddock-i
                   , mk/haskell.mk
+                  , mk/install-on
                   , stack.yaml
                   , test/diff/*.out
                   , test/diff/eg/*.out
