--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -82,6 +82,9 @@ test-suite main
                      , text
   default-language:    Haskell2010
 
+-- This test suite cannot be named simply "text".
+-- Otherwise, "cabal v2-install" somehow confuses
+-- the test suite with the "text" package.
 test-suite text-
   type:                exitcode-stdio-1.0
   main-is:             text.hs
