--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -36,8 +36,14 @@ extra-source-files: .gitignore
                   , test/diff/*.out
                   , test/diff/eg/*.out
                   , test/sdist
-tested-with: GHC==8.6, GHC==8.4, GHC==8.2, GHC==8.0
-           , GHC==7.10, GHC==7.8
+tested-with: GHC==8.10
+           , GHC==8.8
+           , GHC==8.6
+           , GHC==8.4
+           , GHC==8.2
+           , GHC==8.0
+           , GHC==7.10
+           , GHC==7.8
 
 
 source-repository head
