--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -36,7 +36,9 @@ extra-source-files: .gitignore
                   , test/diff/*.out
                   , test/diff/eg/*.out
                   , test/sdist
-tested-with: GHC==9.0
+tested-with: GHC==9.4
+           , GHC==9.2
+           , GHC==9.0
            , GHC==8.10
            , GHC==8.8
            , GHC==8.6
