--- a/leancheck-instances.cabal
+++ b/leancheck-instances.cabal
@@ -66,6 +66,7 @@ library
                  , Test.LeanCheck.Instances.Natural
                  , Test.LeanCheck.Instances.ByteString
                  , Test.LeanCheck.Instances.Containers
+                 , Test.LeanCheck.Instances.Void
                  , Test.LeanCheck.WithInstances
   hs-source-dirs: src
   build-depends: base >= 4 && < 5
